# synthrt

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
dsinfer/: CMakeLists.txt  dsinferConfig.cmake.in
dsinfer/include/dsinfer/: dsinfer_global.h
dsinfer/include/dsinfer/Api/Drivers/Common/: CommonDriverApi.h
dsinfer/include/dsinfer/Api/Drivers/Ggml/: GgmlDriverApi.h
dsinfer/include/dsinfer/Api/Drivers/Onnx/: OnnxDriverApi.h
dsinfer/include/dsinfer/Core/: AlignedAllocator.h  ParamTag.h  Tensor.h
dsinfer/include/dsinfer/Inference/: InferenceDriver.h  InferenceDriverPlugin.h  InferenceSession.h
dsinfer/include/dsinfer/Support/: AlignedAllocator.h  PackageListConfig.h  PhonemeDict.h
dsinfer/lib/: CMakeLists.txt
dsinfer/lib/Core/: Tensor.cpp
dsinfer/lib/Support/: PackageListConfig.cpp  PhonemeDict.cpp
dsinfer/plugins/: CMakeLists.txt
dsinfer/plugins/inferencedrivers/: CMakeLists.txt
dsinfer/plugins/inferencedrivers/ggmldriver/: CMakeLists.txt  GgmlDriver.cpp  GgmlDriver.h  GgmlDriver_Logger.h  GgmlSession.cpp  GgmlSession.h  main.cpp
dsinfer/plugins/inferencedrivers/ggmldriver/internal/: Session.cpp  Session.h  diffsinger.h  inference.cpp  model.cpp  pitch.h  pitch_inference.cpp  pitch_model.cpp  runtime_backend.cpp  runtime_backend.h  variance.h  variance_inference.cpp  variance_model.cpp  vocoder.h  vocoder_inference.cpp  vocoder_model.cpp
dsinfer/plugins/inferencedrivers/onnxdriver/: CMakeLists.txt  OnnxDriver.cpp  OnnxDriver.h  OnnxDriver_Logger.h  OnnxSession.cpp  OnnxSession.h  main.cpp
dsinfer/plugins/inferencedrivers/onnxdriver/internal/: Env.cpp  Env.h  ExecutionProvider.cpp  ExecutionProvider.h  ScopedTimer.h  Session.cpp  Session.h  SessionImage.cpp  SessionImage.h
dsinfer/plugins/inferenceinterpreters/: CMakeLists.txt
dsinfer/plugins/inferenceinterpreters/acoustic/: AcousticInference.cpp  AcousticInference.h  AcousticInterpreter.cpp  AcousticInterpreter.h  CMakeLists.txt  main.cpp
dsinfer/plugins/inferenceinterpreters/acoustic/internal/: Interpolator.h  TensorHelper.h
dsinfer/plugins/inferenceinterpreters/common/: CMakeLists.txt
dsinfer/plugins/inferenceinterpreters/common/include/InterpreterCommon/: Algorithm.h  Driver.h  ErrorCollector.h  IdMappingLoader.h  InputWord.h  LinguisticEncoder.h  MathUtil.h  Parser.h  SpeakerEmbedding.h  Speedup.h  TensorHelper.h
dsinfer/plugins/inferenceinterpreters/common/src/: Driver.cpp  IdMappingLoader.cpp  InputWord.cpp  LinguisticEncoder.cpp  SpeakerEmbedding.cpp
dsinfer/plugins/inferenceinterpreters/duration/: CMakeLists.txt  DurationInference.cpp  DurationInference.h  DurationInterpreter.cpp  DurationInterpreter.h  main.cpp
dsinfer/plugins/inferenceinterpreters/pitch/: CMakeLists.txt  PitchInference.cpp  PitchInference.h  PitchInterpreter.cpp  PitchInterpreter.h  main.cpp
dsinfer/plugins/inferenceinterpreters/variance/: CMakeLists.txt  VarianceInference.cpp  VarianceInference.h  VarianceInterpreter.cpp  VarianceInterpreter.h  main.cpp
dsinfer/plugins/inferenceinterpreters/vocoder/: CMakeLists.txt  VocoderInference.cpp  VocoderInference.h  VocoderInterpreter.cpp  VocoderInterpreter.h  main.cpp
dsinfer/plugins/singerproviders/: CMakeLists.txt
dsinfer/plugins/singerproviders/diffsinger/: CMakeLists.txt  DiffSingerProvider.cpp  DiffSingerProvider.h  main.cpp
dsinfer/tests/tst_onnxdriver/: CMakeLists.txt  TestCaseLoader.cpp  TestCaseLoader.h  main.cpp
dsinfer/tests/tst_onnxdriver/resources/cases/: mixed_type_ops.json
dsinfer/tests/tst_onnxdriver/resources/models/: mixed_type_ops.onnx
dsinfer/tests/tst_onnxdriver/resources/scripts/generate_onnx/: mixed_type_ops.py
dsinfer/tests/txtdict/: CMakeLists.txt  main.cpp
dsinfer/tools/cli/: CMakeLists.txt  main.cpp
dsinfer/util/: CMakeLists.txt
dsinfer/util/inferutil/: CMakeLists.txt
dsinfer/util/inferutil/include/inferutil/: Algorithm.h  Driver.h  ErrorCollector.h  InputWord.h  LinguisticEncoder.h  Parser.h  SpeakerEmbedding.h  Speedup.h  TensorHelper.h
dsinfer/util/inferutil/include/inferutil/detail/: Parser_impl.h
dsinfer/util/inferutil/src/: Driver.cpp  InputWord.cpp  LinguisticEncoder.cpp  SpeakerEmbedding.cpp
dsinfer/util/inputparser/: AcousticInputParser.cpp  AcousticInputParser.h  CMakeLists.txt
dsinfer/util/inputparser/include/: AcousticInputParser.h  DurationInputParser.h  PitchInputParser.h  VarianceInputParser.h
dsinfer/util/inputparser/src/: AcousticInputParser.cpp  DurationInputParser.cpp  InputParserCommon.cpp  InputParserCommon_p.h  PitchInputParser.cpp  VarianceInputParser.cpp
dsinfer/util/onnxutil/: CMakeLists.txt  OnnxTensor.cpp  OnnxTensor.h
dsinfer/util/wavfile/: CMakeLists.txt
dsinfer/util/wavfile/include/: WavFile.h
dsinfer/util/wavfile/src/: WavFile.cpp
synthrt/: CMakeLists.txt  synthrtConfig.cmake.in
synthrt/include/synthrt/: synthrt_global.h
synthrt/include/synthrt/Core/: Contribute.h  NamedObject.h  Object.h  PackageRef.h  SynthUnit.h
synthrt/include/synthrt/Plugin/: Plugin.h  PluginFactory.h  PluginFactory_p.h
synthrt/include/synthrt/SVS/: Inference.h  InferenceContrib.h  InferenceInterpreter.h  InferenceInterpreterPlugin.h  SingerContrib.h  SingerProvider.h  SingerProviderPlugin.h
synthrt/include/synthrt/Support/: DisplayPath.h  DisplayText.h  Error.h  Expected.h  JSON.h  Logging.h
synthrt/include/synthrt/Task/: AbstractTask.h  ITask.h
synthrt/lib/: CMakeLists.txt
synthrt/lib/Core/: Contribute.cpp  Contribute_p.h  NamedObject.cpp  NamedObject_p.h  Object.cpp  Object_p.h  PackageRef.cpp  PackageRef_p.h  SynthUnit.cpp  SynthUnit_p.h
synthrt/lib/Plugin/: Plugin.cpp  PluginFactory.cpp
synthrt/lib/SVS/: Inference.cpp  InferenceContrib.cpp  SingerContrib.cpp
synthrt/lib/Support/: DisplayPath.cpp  DisplayText.cpp  Error.cpp  JSON.cpp  Logging.cpp
synthrt/lib/Task/: AbstractTask.cpp  AbstractTask_p.h  ITask.cpp  ITask_p.h
synthrt/tests/auto/: CMakeLists.txt
synthrt/tests/auto/Core/: Contribute.cpp  PackageRef.cpp
synthrt/tests/auto/Support/: DisplayText.cpp  Expected.cpp  JSON.cpp  Logging.cpp
synthrt/tests/json/: CMakeLists.txt  main.cpp
(+13 files in other folders)
